--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "JaeWoo Park"
-resume_title:                   "Kyungpook national university Student studying electronics engineering"
+resume_title:                   "Kyungpook national university Student #studying electronics engineering"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "jwpark1218@naver.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "555-7334"
