--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,15 @@
 # Degree
-<!--
+
 - degree: Bachelor of Arts, Human Rights
   uni: Yale University
   year: 2004 &mdash; 2008
   awards:
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
---!>
+
 - degree: High School Diploma
   uni: BOIN High School
   year: 2016
- 
+ awards:
+    - award: Summa Cumme Laude graduate
+  summary: If you had any meaningful roles at college, feel free to write about them here
