--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,6 +10,5 @@
 - degree: High School Diploma
   uni: BOIN High School
   year: 2016
- awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+ award: Most likely to succeed
+  summary: You can choose to have either a single or multiple awards
