--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,14 +1,13 @@
 # Degree
-
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: College of IT Engineering, School of Electronics Engineering
+  uni: Kyungpook National University
+  year: 2018 &mdash; 2021
   awards:
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: High School Diploma
-  uni: BOIN High School
+  uni: Boin High School
   year: 2016
- award: Most likely to succeed
+  award: Most likely to succeed
   summary: You can choose to have either a single or multiple awards
