--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "JaeWoo Park"
-resume_title:                   "Kyungpook national university Student      studying electronics engineering"
+resume_title:                   "Kyungpook national university Student 
+studying electronics engineering"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "jwpark1218@naver.com"
